--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             alt="Experience Icon"
                             class="icon"
                         />
-                        <h3>Experience</h3>
+                        <h3>Profile</h3>
                         <p>Mern Stack Development
                         </p>
                     </div>
