--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             class="icon"
                         />
                         <h3>Profile</h3>
-                        <p>Mern Stack Development
+                        <p>Mern Stack Developer
                         </p>
                     </div>
                     <div class="details-container">
