--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </nav>
 
     <section id="profile"> 
-        <div class="section__pic-container">
+<!--         <div class="section__pic-container">
             <img src="./assets/profile-pic.jpg" alt="Shikher Patel Profile Picture" class="profile-pic">
-        </div>
+        </div> -->
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Shikher Patel</h1>
@@ -84,7 +84,7 @@
         <div class="section-container">
             <div class="section__pic-container">
                 <img 
-                    src="./assets/about-pic.png" 
+                    src="./assets/profile-pic.jpg" 
                     alt="Profile Picture" 
                     class="about-pic"
                 />
