--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <div class="article-container">
                         <img src="./assets/project-1.png" alt="project1" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <h2 class="experience-sub-title project-title">Chatify</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2" onclick="location.href='https://github.com/shikherpatel00/Mern-Chat-App'">GitHub</button>
                         <button class="btn btn-color-2" onclick="location.href='https://chatify-ampo.onrender.com/login'">Live Demo</button>
@@ -266,7 +266,7 @@
                     <div class="article-container">
                         <img src="./assets/project-2.png" alt="project2" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <h2 class="experience-sub-title project-title">Video App Backend</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2" onclick="location.href='https://github.com/shikherpatel00/Youtube-Backend'">GitHub</button>
                         <button class="btn btn-color-2" onclick="location.href=''">Live Demo</button>
@@ -276,7 +276,7 @@
                     <div class="article-container">
                         <img src="./assets/project-3.png" alt="project3" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Three</h2>
+                    <h2 class="experience-sub-title project-title">Todo List</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2" onclick="location.href='https://github.com/shikherpatel00/TodoList-v2'">GitHub</button>
                         <button class="btn btn-color-2" onclick="location.href='https://todolist-v2-4dsu.onrender.com/'">Live Demo</button>
