Second picture change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Shikher's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaquerries.css">
 </head>
@@ -48,10 +48,10 @@
             <div class="btn-container">
                 <button 
                     class="btn btn-color-2"
-                    onclick="location.href='https://drive.google.com/file/d/1LEsaaBoHnO7VWCAXIGsc_dJjv33T4Iqv/view?usp=sharing'"
+                    onclick="location.href='https://drive.google.com/file/d/1LEsaaBoHnO7VWCAXIGsc_dJjv33T4Iqv/view?usp=drive_link'"
                 >Download CV</button>
                 <button 
-                    class="btn btn-color-1"
+                    class="btn btn-color-1"z
                     onclick="window.open('./#contact')"
                 >Contact</button>
             </div>
@@ -84,7 +84,7 @@
         <div class="section-container">
             <div class="section__pic-container">
                 <img 
-                    src="./assets/about-pic.png" 
+                    src="./assets/about-pic.jpg" 
                     alt="Profile Picture" 
                     class="about-pic"
                 />
@@ -97,8 +97,8 @@
                             alt="Experience Icon"
                             class="icon"
                         />
-                        <h3>Experience</h3>
-                        <p>Mern Stack Development
+                        <h3>Profile</h3>
+                        <p>Mern Stack Developer
                         </p>
                     </div>
                     <div class="details-container">
@@ -256,7 +256,7 @@
                     <div class="article-container">
                         <img src="./assets/project-1.png" alt="project1" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <h2 class="experience-sub-title project-title">Chatify</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2" onclick="location.href='https://github.com/shikherpatel00/Mern-Chat-App'">GitHub</button>
                         <button class="btn btn-color-2" onclick="location.href='https://chatify-ampo.onrender.com/login'">Live Demo</button>
@@ -266,7 +266,7 @@
                     <div class="article-container">
                         <img src="./assets/project-2.png" alt="project2" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <h2 class="experience-sub-title project-title">Video App Backend</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2" onclick="location.href='https://github.com/shikherpatel00/Youtube-Backend'">GitHub</button>
                         <button class="btn btn-color-2" onclick="location.href=''">Live Demo</button>
@@ -276,7 +276,7 @@
                     <div class="article-container">
                         <img src="./assets/project-3.png" alt="project3" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Three</h2>
+                    <h2 class="experience-sub-title project-title">Todo List</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2" onclick="location.href='https://github.com/shikherpatel00/TodoList-v2'">GitHub</button>
                         <button class="btn btn-color-2" onclick="location.href='https://todolist-v2-4dsu.onrender.com/'">Live Demo</button>
