--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>I am a passionate web developer and problem solver specializing in the MERN stack and data structures & algorithms using C++. Currently pursuing a B.Tech in Electronics and Communication Engineering at IIIT Bhopal, I have experience building responsive, full-stack applications and solving 450+ problems on platforms like LeetCode and GFG.</p>
+                    <p>I am a passionate web developer and problem solver specializing in the MERN stack and data structures & algorithms using C++. I have done my B.Tech in Electronics and Communication Engineering at IIIT Bhopal, I have experience building responsive, full-stack applications and solving 600+ problems on platforms like LeetCode and GFG.</p>
                 </div>
             </div>
         </div>
