--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="btn-container">
                 <button 
                     class="btn btn-color-2"
-                    onclick="location.href='https://drive.google.com/file/d/1LEsaaBoHnO7VWCAXIGsc_dJjv33T4Iqv/view?usp=drive_link'"
+                    onclick="location.href='https://drive.google.com/file/d/1WZ66PtK4yjqkxo0ysWLHlZcFCfV5OiEO/view?usp=sharing'"
                 >Download CV</button>
                 <button 
                     class="btn btn-color-1"z
